--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8" />
   <title>SmartRecruit – AI Recruitment Intelligence</title>
 
-  <!-- Auto redirect (0 seconds) -->
   <meta http-equiv="refresh" content="0; url=https://SmartRecruit-ai.streamlit.app">
 
-  <!-- Open Graph for LinkedIn -->
   <meta property="og:title" content="SmartRecruit – AI Recruitment Intelligence Platform" />
   <meta property="og:description" content="AI-powered resume analysis and JD matching platform." />
-  <meta property="og:image" content="https://karunyakp.github.io/SmartRecruit-AI/SmartRecruit-preview.png" />
-  <meta property="og:url" content="https://karunyakp.github.io/SmartRecruit-AI/" />
+  
+  <meta property="og:image" content="https://raw.githubusercontent.com/Karunyakp/SmartRecruit/main/SmartRecruit-preview.png" />
+  
+  <meta property="og:url" content="https://karunyakp.github.io/SmartRecruit/" />
   <meta property="og:type" content="website" />
 
   <meta name="twitter:card" content="summary_large_image" />
