Fix URL case in meta refresh tag

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>SmartRecruit – AI Recruitment Intelligence</title>
 
-  <meta http-equiv="refresh" content="0; url=https://SmartRecruit-ai.streamlit.app">
+  <meta http-equiv="refresh" content="0; url=https://smartrecruit-ai.streamlit.app">
 
   <meta property="og:title" content="SmartRecruit – AI Recruitment Intelligence Platform" />
   <meta property="og:description" content="AI-powered resume analysis and JD matching platform." />
@@ -21,3 +21,4 @@
   <p>Redirecting to SmartRecruit app...</p>
 </body>
 </html>
+
