--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>SmartRecruit – AI Recruitment Intelligence</title>
 
-  <meta http-equiv="refresh" content="0; url=https://smartrecruit-ai.streamlit.app">
+  <meta http-equiv="refresh" content="0; url=https://smartrecruit.streamlit.app/">
 
   <meta property="og:title" content="SmartRecruit – AI Recruitment Intelligence Platform" />
   <meta property="og:description" content="AI-powered resume analysis and JD matching platform." />
@@ -15,10 +15,13 @@
   <meta property="og:type" content="website" />
 
   <meta name="twitter:card" content="summary_large_image" />
+  
+  <script type="text/javascript">
+      window.location.href = "https://smartrecruit.streamlit.app/";
+  </script>
 </head>
 
 <body>
-  <p>Redirecting to SmartRecruit app...</p>
+  <p>Redirecting to SmartRecruit...</p>
 </body>
 </html>
-
